Current:
  * Chinese translation updates from liulitchi

19.10.0:
  * Corrected a Regression: The better display of exponents failed for exp(x^2).
  * Seems like some Windows computers only have a numpad enter key.
  * Chinese translation updates from liulitchi.
  * Russian translation updates from OlesyaGerasimenko.

19.09.1:
  * The names of greek letters are no more converted to greek letters in variable
    names by default.
  * Smarter Formatting of asterisk and hyphen.
  * An automatic per-commit Windows Build for Appveyor.
  * Always recalculate the worksheet size when needed.
  * Better vertical alignment of exponents.
  * The layout is now more consistent between platforms.
  * Chinese translation updates from liulitchi.
  * wxMaxima now remembers the question for each answer, not only its number.
  * Now the manual can be localized, too.
  * Non-breaking spaces are now replaced by ordinary spaces before being sent to maxima.
  * Many other bug fixes.

19.09.0:
  * Handle timeouts when writing to maxima and partial writes.
  * Worksheet text disappeared on scrolling on some platforms.
  * Sped up sending code to maxima.
  * Removed quoting of Unicode characters within strings sent to maxima.

19.08.1:
  * Bugfixes for nearly every instance something was drawn on the screen.
  * Better handling of multi-cell lisp code

19.08.0:
  * Updated the russian translation
  * More and better test cases
  * Another SpeedUp
  * Correctly handle nested comments
  * Format lisp code correctly
  * Correctly read the default style
  * Gracefully handle invalid colors
  * Changed the default communication port to 40100
  * Several fixes for different combinations of wxWidgets and GTK versions

19.07.0:
 * Many improvements and bugfixes in the LaTeX and HTML export function
 * Many updated translations
 * Resolved a freeze on autocompletion
 * A sidebar that shows the contents of variables
 * Simplified the recalculation logic in order to squash the remaining bugs