@@ -1,5 +1,6 @@
 Current:
   * Chinese translation updates from liulitchi
+  * Better detection of the gnuplot location
 
 19.10.0:
   * Corrected a Regression: The better display of exponents failed for exp(x^2).
